[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.8244, 32.1765 )

[node name="player" type="KinematicBody2D" groups=[
"players",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="is_jump_allowed" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = 17.9917
margin_top = -32.8991
margin_right = 38.9917
margin_bottom = -14.8991
__meta__ = {
"_edit_use_anchors_": false
}

[node name="is_touching" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -6.81115
margin_top = -33.4132
margin_right = 6.18885
margin_bottom = -19.4132
__meta__ = {
"_edit_use_anchors_": false
}

[node name="is_drop_allowed" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -34.0926
margin_top = -33.8627
margin_right = -19.0926
margin_bottom = -17.8627
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBackground" type="ColorRect" parent="Camera2D"]
margin_left = -30.0
margin_top = -50.0
margin_right = 30.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ColorRect" parent="Camera2D/HealthBackground"]
margin_right = 60.0
margin_bottom = 5.0
color = Color( 0.556863, 1, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
visible = false
margin_left = -19.6842
margin_top = -2.10535
margin_right = 32.3158
margin_bottom = 11.8947
grow_horizontal = 2
text = "<name>"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
